# ai-api-server

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  app.py  cloud_utils.py  config.py  dev.dockerfile  docker-compose.yaml  face_preprocess.py  logger.py  models.py  prod.dockerfile  pyproject.toml  requirements.txt  upload.py  utils.py
ai_api_server/: api.py  app.py  cloud_utils.py  config.py  dto.py  face_preprocess.py  logger.py  main.py  rmq_app.py  setup.py  utils.py
tests/: test_simple.py
