[tool.poetry]
name = "ai-api-server"
version = "0.1.0"
description = "AI-API-Server for GDSC-KU AI-Profile project"
authors = [
    "KY00KIM <dev.kyoomin@gmail.com>",
]
readme = "README.md"

[tool.poetry.scripts]
start  = "ai_api_server.app:run"

[tool.poetry.dependencies]
python               = "^3.10"
uvicorn              = "0.23.2"
fastapi              = "0.94.0"
google-cloud-storage = "2.10.0"
python-dotenv        = "1.0.0"
pillow               = "9.5.0"
aio-pika = "^9.4.1"
httpx = "^0.27.0"
head-segmentation = {git = "https://github.com/wiktorlazarski/head-segmentation.git"}
ultralytics = "^8.1.47"
onnx = "^1.16.0"
onnxruntime-gpu = "^1.17.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = [
    "poetry-core",
]
build-backend = "poetry.core.masonry.api"
